# Collaborative-3D-loader

./: .gitignore  Cargo.toml  README.md  index.html  main.js  models.db
backend/: Cargo.toml  insert_model.rs
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/assets/models/: Building.gltf  Stop sign.gltf
frontend/assets/models/helix_bridge/: helix_bridge.gltf  license.txt
frontend/assets/models/stop_sign/: license.txt  scene.gltf
frontend/src/: lib.rs  main.rs
src/: lib.rs  main.rs
