[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Saad Moazzam"]
default-run = "backend"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"

[[bin]]
name = "insert_model"
path = "insert_model.rs"