[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Saad Moazzam"]
default-run = "backend"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
base64 = "0.22.1"
