[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
authors = ["Saad Moazzam"]
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
bevy = "0.15.3"
bevy_panorbit_camera = "0.23.0"
tokio = { version = "1.44.1", features = ["rt", "net"] } # For async WebSocket
tokio-tungstenite = "0.24.0"                           # WebSocket client
serde = { version = "1.0.219", features = ["derive"] } # JSON serialization
serde_json = "1.0.140"                                 # JSON handling
futures-util = "0.3.31"