[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
authors = ["Saad Moazzam"]
rust-version = "1.86.0"

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_panorbit_camera = "0.25.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.26.2"
uuid = { version = "0.8", features = ["v4"] }
base64 = "0.22.1"
